--- a/FileSite/appsettings.json
+++ b/FileSite/appsettings.json
@@ -18,7 +18,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost,5432;Database=filesite;User Id=postgres;Password=postgres;"
-    
+        "DefaultConnection": "Server=database;Port=5432;Database=filesite;User Id=postgres;Password=postgres;",
+        "Redis": "redis:6379"
     }
 }
